--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <p class="text-muted mb-2 fw-bold">August 2021 — Present</p>
           <ul>
             <li>
-              <span class="fw-bold">GPA:</span> Weighted: 4.55 / Unweighted: 4.0 • SAT: 1580
+              <span class="fw-bold">GPA:</span> Weighted: 4.55 / Unweighted: 4.0
             </li>
             <li>
             <span class="fw-bold">Relevant Coursework:</span> AP Calculus AB, AP Computer Science A, AP Computer Science Principles, AP Environmental Science, AP Statistics
