--- a/index.html
+++ b/index.html
@@ -61,34 +61,42 @@
             baking fun treats, and binge-watching rom-coms!
           </p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <button type="button" class="btn btn-primary">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="20"
-                height="20"
-                fill="currentColor"
-                class="bi bi-linkedin"
-                viewBox="0 0 16 16"
-              >
-                <path
-                  d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"
-                ></path>
-              </svg>
-            </button>
-            <button type="button" class="btn btn-primary">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="20"
-                height="20"
-                fill="currentColor"
-                class="bi bi-envelope"
-                viewBox="0 0 16 16"
-              >
-                <path
-                  d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"
-                ></path>
-              </svg>
-            </button>
+            <a
+              href="https://www.linkedin.com/in/noha-yousif?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BoZ2AHxpcSNqJ%2BVUA2yoNfg%3D%3D"
+              target="_blank"
+              rel="noopener"
+              ><button type="button" class="btn btn-primary">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="20"
+                  height="20"
+                  fill="currentColor"
+                  class="bi bi-linkedin"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"
+                  ></path>
+                </svg></button
+            ></a>
+            <a
+              href="mailto:nohagyousif@gmail.com"
+              target="_blank"
+              rel="noopener"
+              ><button type="button" class="btn btn-primary">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="20"
+                  height="20"
+                  fill="currentColor"
+                  class="bi bi-envelope"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"
+                  ></path>
+                </svg></button
+            ></a>
           </div>
         </div>
       </div>
@@ -105,10 +113,16 @@
               <span class="fw-bold">GPA:</span> Weighted: 4.55 / Unweighted: 4.0
             </li>
             <li>
-            <span class="fw-bold">Relevant Coursework:</span> AP Calculus AB, AP Computer Science A, AP Computer Science Principles, AP Environmental Science, AP Statistics
+              <span class="fw-bold">Relevant Coursework:</span> AP Calculus AB,
+              AP Computer Science A, AP Computer Science Principles, AP
+              Environmental Science, AP Statistics
             </li>
             <li>
-            <span class="fw-bold">Honors:</span> Mu Alpha Theta, National Honor Society, Quill and Scroll, Science National Honor Society, Sociedad Honoraria Hispánica, National African American Recognition Program, National Merit Commended Scholar, President's Award for Outstanding Academic Achievement
+              <span class="fw-bold">Honors:</span> Mu Alpha Theta, National
+              Honor Society, Quill and Scroll, Science National Honor Society,
+              Sociedad Honoraria Hispánica, National African American
+              Recognition Program, National Merit Commended Scholar, President's
+              Award for Outstanding Academic Achievement
             </li>
           </ul>
         </li>
@@ -141,7 +155,9 @@
           </ul>
         </li>
         <li class="timeline-item">
-          <h5 class="fw-bold">Research Intern @ Stanford Compression Forum (SHTEM Program)</h5>
+          <h5 class="fw-bold">
+            Research Intern @ Stanford Compression Forum (SHTEM Program)
+          </h5>
           <p class="text-muted mb-2 fw-bold">June 2024 — August 2024</p>
           <ul>
             <li>
@@ -150,16 +166,15 @@
             </li>
             <li>
               Developed 16-question Qualtrics survey to gather subjective
-              responses to AI-generated vaccine calls from 400+
-              participants; employed Python (Statsmodels) for linear
-              regression analysis.
+              responses to AI-generated vaccine calls from 400+ participants;
+              employed Python (Statsmodels) for linear regression analysis.
             </li>
             <li>
-              Produced 5-page peer-reviewed report, “Doctor Who?: The
-              Influence of AI on Human Responses to Vaccine Calls,”
-              presented at MIT Undergraduate Research Technology Conference
-              (URTC) and accepted for publication in IEEE Xplore, informing
-              ethical design of medical AI technologies.
+              Produced 5-page peer-reviewed report, “Doctor Who?: The Influence
+              of AI on Human Responses to Vaccine Calls,” presented at MIT
+              Undergraduate Research Technology Conference (URTC) and accepted
+              for publication in IEEE Xplore, informing ethical design of
+              medical AI technologies.
             </li>
           </ul>
         </li>
@@ -218,8 +233,8 @@
               <h5 class="card-title">Emoji Pong Game</h5>
               <p class="card-text text-muted">
                 This p5.js program is inspired by Instagram's hidden emoji pong
-                game. I shared it with over 200 high school students and
-                Google engineers through Google’s Code Next Connect program.
+                game. I shared it with over 200 high school students and Google
+                engineers through Google’s Code Next Connect program.
               </p>
               <a
                 target="_blank"
@@ -233,20 +248,20 @@
         </div>
       </div>
     </div>
-      <footer class="py-3">
-        <p class="text-center">© 2024 Noha Yousif</p>
-      </footer>
+    <footer class="py-3">
+      <p class="text-center">© 2024 Noha Yousif</p>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpT++sH9q5qG4hNSv7RYzogFQXcN4U0K5lOJWsMhP0ct3eX9YNFy2Uof0tYmhlA6"
       crossorigin="anonymous"
     ></script>
     <script>
-      const navLinks = document.querySelectorAll('.nav-link');
-      navLinks.forEach(link => {
-        link.addEventListener('click', function() {
-          navLinks.forEach(nav => nav.classList.remove('active'));
-          this.classList.add('active');
+      const navLinks = document.querySelectorAll(".nav-link");
+      navLinks.forEach((link) => {
+        link.addEventListener("click", function () {
+          navLinks.forEach((nav) => nav.classList.remove("active"));
+          this.classList.add("active");
         });
       });
     </script>
